# emesh_sensor

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  flash_reset.sh  prj.conf  reset.sh
boards/: nrf52840dk_nrf52840.overlay
manifest/: west.yml
src/: coap_client_utils.c  coap_client_utils.h  coap_server_client_interface.h  main.cpp  main.cpp.bak
src/bluetooth/: CMakeLists.txt
src/bluetooth/adv_btn/: advertise_button.cpp  advertise_button.hpp
src/bluetooth/connection_manager/: connection_handler.cpp  connection_handler.hpp  connection_manager.cpp  connection_manager.hpp
src/bluetooth/services/ess/: environmental_sensing_service.cpp  environmental_sensing_service.hpp
src/bluetooth/shared/: msg_passer.cpp  msg_passer.hpp
src/sensors/: CMakeLists.txt
src/sensors/bme280/: bme_280.cpp  bme_280.hpp
src/sensors/interface/humidity/: humidity_sensor.cpp  humidity_sensor.hpp
src/sensors/interface/moisture/: moisture_sensor.cpp  moisture_sensor.hpp
src/sensors/interface/temperature/: temperature_sensor.cpp  temperature_sensor.hpp
src/utils/: CMakeLists.txt  bounce.hpp  logger.cpp  logger.hpp
west_bkp/: config
